# resvg-py

./: Cargo.toml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: CI.yml  lint.yml  test.yml
python/resvg/: __init__.py  __init__.pyi  __main__.py  _resvg.pyi  usvg.pyi
python/tests/: conftest.py  test_options.py  test_resvg_render.py
src/: lib.rs
tests/: conftest.py  test_resvg_render.py
