[package]
name = "resvg"
version = "0.1.2"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "resvg"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.2"
resvg = "0.45.1"
tiny-skia = "0.11.4"
usvg = "0.45.1"

# CLI
log = "0.4"
pico-args = { version = "0.5", features = ["eq-separator"] }
svgtypes = "0.15.3"
