[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "resvg"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = "MIT"
keywords = []
authors = [{ name = "Brice Yan", email = "briceyan3.0@gmail.com" }]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
