[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

# project metadata
[project]
name = "resvg"
description = "A Python binding of resvg, the high-performance SVG rendering library in Rust"
readme = "README.md"
urls.Code = "https://github.com/briceyan/resvg-py"
urls.Download = "https://pypi.org/project/resvg/"
urls.Homepage = "https://github.com/briceyan/resvg-py"
urls."Issue tracker" = "https://github.com/briceyan/resvg-py/issues"
license = "MIT"
requires-python = ">=3.8"

# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version"]

[[project.authors]]
name = "Brice Yan"
email = "briceyan3.0@gmail.com"

[tool.maturin]
features = ["pyo3/extension-module"]
